--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
+    sourceSets {
+        instrumentTest.setRoot('src/test')
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    instrumentTestCompile 'junit:junit:4.+'
     compile 'com.google.code.gson:gson:2.2.+'
+    instrumentTestCompile 'com.google.android:android:4.1.1.4'
+    instrumentTestCompile 'com.android.support:support-v4:13.0.+'
+    instrumentTestCompile 'org.robolectric:robolectric:2.1.+'
 }
 
